--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/drawer": "^7.4.2",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/stack": "^7.3.4",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "expo": "~53.0.11",
@@ -40,7 +40,8 @@
     "react-native-svg": "15.11.2",
     "react-native-tcp": "^4.0.0",
     "react-native-udp": "^4.1.7",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "swr": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
